--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "@gouch/to-title-case",
   "description": "A JavaScript method for intelligently converting strings to title case",
-  "version": "2.2.0",
+  "version": "2.3.0",
   "author": "David Gouch",
   "devDependencies": {
     "qunit": "^2.6.0",
     "standard": "^12.0.0"
   },
+  "keywords": [
+    "prose",
+    "writing",
+    "styleguide",
+    "standards"
+  ],
   "license": "MIT",
   "repository": "github:gouch/to-title-case",
   "main": "to-title-case.js",
